tests/baselines/reference/primitiveTypeAssignment.errors.txt
==== tests/cases/compiler/primitiveTypeAssignment.ts (3 errors) ====
    var x = any;
            ~~~
!!! primitiveTypeAssignment.ts(1,9): error TS2095: Cannot find name 'any'.
    
    var y = number;
            ~~~~~~
!!! primitiveTypeAssignment.ts(3,9): error TS2095: Cannot find name 'number'.
    
    var z = boolean;
            ~~~~~~~
!!! primitiveTypeAssignment.ts(5,9): error TS2095: Cannot find name 'boolean'.
    